# posGraduacaoIA

./: .gitattributes  .gitignore  README.md
EngenhariaML/aulaTitanic/: README.md  pyproject.toml  requirements.in  requirements.txt
EngenhariaML/aulaTitanic/conf/base/: catalog.yml  parameters.yml  parameters_classifier.yml
EngenhariaML/aulaTitanic/docs/source/: conf.py
EngenhariaML/aulaTitanic/notebooks/: classificador.ipynb  model.pkl  preparacao.ipynb
EngenhariaML/aulaTitanic/src/titanic/: __init__.py  __main__.py  settings.py
EngenhariaML/aulaTitanic/src/titanic/pipelines/classifier/: __init__.py  nodes.py  pipeline.py
EngenhariaML/aulaTitanic/tests/pipelines/classifier/: test_pipeline.py
EngenhariaML/pdblackmamba/: .gitignore  README.md  pyproject.toml  requirements.txt
EngenhariaML/pdblackmamba/conf/base/: catalog.yml  parameters.yml
EngenhariaML/pdblackmamba/data/01_raw/: dataset_kobe_dev.parquet  dataset_kobe_prod.parquet
EngenhariaML/pdblackmamba/data/03_primary/: data_filtered.parquet
EngenhariaML/pdblackmamba/data/05_model_input/: base_test.parquet  base_train.parquet  x_prod.pkl  y_prod.pkl
EngenhariaML/pdblackmamba/data/06_models/decisionTree_model/: MLmodel  conda.yaml  model.pkl  requirements.txt
EngenhariaML/pdblackmamba/data/06_models/regLog_model/: MLmodel  model.pkl
EngenhariaML/pdblackmamba/data/07_model_output/: predict_prod_pickle.parquet  predict_prod_server.parquet  y_pred.pkl  y_pred_prob.pkl  y_prob_prod.pkl
EngenhariaML/pdblackmamba/docs/source/: conf.py  index.rst
EngenhariaML/pdblackmamba/notebooks/: dev_input_analysis.ipynb  metrics.ipynb  model_evaluation.ipynb  processing_data.ipynb
EngenhariaML/pdblackmamba/notebooks/mlruns/0/: meta.yaml
EngenhariaML/pdblackmamba/src/pdblackmamba/: __init__.py  __main__.py  pipeline_registry.py  settings.py
EngenhariaML/pdblackmamba/src/pdblackmamba/pipelines/DataPreparation/: nodes.py  pipeline.py
EngenhariaML/pdblackmamba/src/pdblackmamba/pipelines/ModelEvaluationPickle/: nodes.py  pipeline.py
EngenhariaML/pdblackmamba/src/pdblackmamba/pipelines/ModelTrain/: nodes.py  (+1 more)
EngenhariaML/pdblackmamba/streamlit/: main.py
EngenhariaML/pdblackmamba/streamlit/pages/: Analise.py  Inferencia.py
(+597 files in other folders)
